# badger-rs

./: Cargo.toml  README.md  build.rs
benches/: my_benchmark.rs
examples/: badger.rs
src/: backup.rs  compaction.rs  db.rs  iterator.rs  kv.rs  kv_test.rs  level_handler.rs  levels.rs  lib.rs  log_file.rs  manifest.rs  mmap.rs  st_manager.rs  test_util.rs  transition.rs  types.rs  value_log.rs  value_log_tests.rs
src/doc/: write.md
src/event/: mod.rs
src/options/: mod.rs
src/pb/: backup.rs  badgerpb3.proto  badgerpb3.rs  mod.rs
src/skl/: alloc.rs  arena.rs  arena2.rs  arena_proxy.rs  cursor.rs  mod.rs  node.rs  parallel_buffer.rs  parallel_slice.rs  skip.rs  skiplist2.rs  small_allocate.rs
src/table/: builder.rs  iterator.rs  mod.rs  table.rs  tests.rs
src/test_data/: vlog_file.text
src/y/: codec.rs  iterator.rs  merge_iterator.rs  mod.rs
