[package]
name = "badger-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.131", features = ["derive"] }
serde_json = { version = "1.0", default-features = true, features = ["alloc"] }
anyhow = "1.0.31"
thiserror = "1.0"
tokio = { version = "1.16.1", features = ["full", "tracing"] }
byteorder = "1.4.3"
rand = "0.8.5"
maligned = "0.2.1"
atomic = "0.5.1"
tabled = { version = "0.9.0", features = ["ansi-str", "color"] }
memmap = "0.7.0"
bytes = "1.2.1"
bloom = "0.3.2"
growable-bloom-filter = { version = "2.0.1", features = ["nightly"] }
tokio-metrics = "0.1.0"
filename = "0.1.1"
num_cpus = "1.13.1"
threads_pool = "0.2.6"
crc32fast = "1.3.2"
async-trait = "0.1.58"
fmmap = { version = "0.3.2", features = ["tokio-async"] }
parking_lot = "0.12.1"
bitflags = "1.3.2"
libc = "0.2.137"
log = { version = "0.4.17", features = ["kv_unstable", "kv_unstable_serde", "kv_unstable_sval"] }
async-channel = "1.7.1"
file-guard = "0.1.0"
fs2 = "0.4.3"
awaitgroup = "0.6.0"
protobuf = { version = "3.2.0", features = ["with-bytes"] }
range-lock = "0.2.2"
tracing = "0.1.37"
drop_cell = "0.0.0"
walkdir = "2.3.2"
crossbeam-epoch = "0.9.13"
tokio-context = "0.1.3"
dyn-clone = "1.0.10"
eieio = "1.0.0"
either = "1.8.1"
enum-unitary = "0.5.0"
atom_box = "0.1.2"
console-subscriber = "0.1.8"
[dev-dependencies]
tracing-subscriber = "0.3.16"
tracing-log = "0.1.3"
chrono = "0.4.22"
env_logger = "0.9.1"
console_log = { version = "0.2.0", features = ["color"] }

[build]
rustflags = ["--cfg", "tokio_unstable"]