[package]
name = "badger-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.164", features = ["derive"] }
serde_json = { version = "1.0.97", default-features = true, features = ["alloc"] }
anyhow = "1.0.71"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full", "tracing"] }
byteorder = "1.4.3"
rand = "0.8.5"
maligned = "0.2.1"
atomic = "0.5.3"
tabled = { version = "0.12.2", features = ["ansi-str", "color"] }
memmap = "0.7.0"
bytes = "1.4.0"
bloom = "0.3.2"
growable-bloom-filter = { version = "2.0.1", features = ["nightly"] }
tokio-metrics = "0.2.2"
filename = "0.1.1"
num_cpus = "1.15.0"
threads_pool = "0.2.6"
crc32fast = "1.3.2"
async-trait = "0.1.68"
fmmap = { version = "0.3.2", features = ["tokio-async"] }
parking_lot = "0.12.1"
bitflags = "2.3.2"
libc = "0.2.146"
log = { version = "0.4.19", features = ["kv_unstable", "kv_unstable_serde", "kv_unstable_sval"] }
async-channel = "1.8.0"
file-guard = "0.1.0"
fs2 = "0.4.3"
awaitgroup = "0.6.0"
protobuf = { version = "3.2.0", features = ["with-bytes"] }
range-lock = "0.2.3"
tracing = "0.1.37"
drop_cell = "0.0.0"
walkdir = "2.3.3"
crossbeam-epoch = "0.9.15"
tokio-context = "0.1.3"
dyn-clone = "1.0.11"
eieio = "1.0.0"
either = "1.8.1"
enum-unitary = "0.5.0"
atom_box = "0.1.2"
console-subscriber = "0.1.9"
uuid = { version = "1.3.4", features = ["v5", "v4"] }
[dev-dependencies]
tracing-subscriber = "0.3.17"
tracing-log = "0.1.3"
chrono = "0.4.26"
env_logger = "0.10.0"
console_log = { version = "1.0.0", features = ["color"] }
itertools = "0.10.5"

[build]
rustflags = ["--cfg", "tokio_unstable"]

[build-dependencies]
protoc-rust = "2"